# move_ur5_qt

./: CMakeLists.txt  LICENSE  README.md  mainpage.dox  package.xml
include/move_ur5_qt/: collision_objects_mannager.h  collision_objects_mannager.hpp  comannagerdialog.hpp  gesture_handler.hpp  getfile.hpp  globaldata.h  globaldata.hpp  globalobj.hpp  logger.hpp  main_window.hpp  objectdrawer.hpp  objectrelocator.hpp  pickandplacedialog.hpp  qnode.hpp  stringbuffer.hpp  taskprogrammer.hpp  tf_listener.hpp  timer.hpp  trajectoryxmlreader.hpp  trajectoryxmlwriter.hpp
launch/: T-RPD.launch  fake_T-RPD.launch  move_ur5_qt.launch
objects/: ball.txt  table.txt
param/: target_frame.yaml
src/: collision_objects_mannager.cpp  comannagerdialog.cpp  gesture_handler.cpp  getfile.cpp  globaldata.cpp  globalobj.cpp  loger.cpp  logger.cpp  main.cpp  main_window.cpp  objectdrawer.cpp  objectrelocator.cpp  pickandplacedialog.cpp  qnode.cpp  stringbuffer.cpp  taskprogrammer.cpp  tf_listener.cpp  timer.cpp  trajectoryxmlreader.cpp  trajectoryxmlwriter.cpp
trajectory/: .test_trajectory.xml.swp  test_trajectory.xml
ui/: comannagerdialog.ui  main_window.ui  pickandplacedialog.ui
